--- a/index.qmd
+++ b/index.qmd
@@ -331,11 +331,15 @@ presented and how to attend either in person or online.
 ::::
 
 :::{.notes}
-To sum up, thank you for listening, and if this is the first time you've heard about Open Scholarship Community
-Sheffield and would like to be involved then please do join and add your profile, you can scan this QR code.
+So, thank you for listening, and if this is the first time you've heard about Open Scholarship Community
+Sheffield and would like to be involved then please do join and add your profile, you can scan this QR code and sign-up.
+
 
 Alternatively if you feel there is some aspect of Open Research that you could do with advice on please do consider
 browsing the members profile page where each person has listed their areas of interest ane experience and feel free to
 contact them. If they don't have the specific knowledge or capacity to help they will likely be able to sign-post you to
 someone else or another service that can help.
+
+I'd be particularly interested to hear from you if you would like to be more involved on the Open Scholarship Community
+Sheffield whether you are are based at Hallam University or University of Sheffield, please do get in touch.
 :::
